# dbtx

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  Dockerfile.dev  README.md  build.rs  docker-compose.yml  justfile  package-lock.json  package.json  playwright.config.ts
docs/: per-node-source-watermark-tracking.md
lineage-ui/: package-lock.json  package.json  vite.config.ts
migrations/: 0001_init.sql  0002_projects_environments.sql  0002_worker_multi_queue.sql  0003_invocation_selected_resources.sql  0003_project_identity.sql  0004_environment_versions_and_run_git.sql  0004_reconciliation_plans.sql  0005_manifest_prepare_invocations.sql  0005_strict_control_plane.sql  0006_drop_project_slug.sql  0006_reconcile_leases_and_plan_metadata.sql  0007_managed_profiles.sql  0007_source_state_satisfaction.sql  0008_environment_owned_profiles.sql  0008_reconcile_preparation_state.sql  0009_drop_legacy_environment_profile_override_columns.sql  0009_reconcile_retry_backoff.sql  0010_add_environment_target_name.sql  0010_reconcile_input_fingerprint.sql  0011_drop_dbt_invocation_id.sql  0011_node_execution_rebuild_indexes.sql  0012_add_execution_mode.sql  0012_persisted_enum_constraints.sql  0013_add_environment_worker_queue.sql  0013_node_source_watermarks.sql  0014_add_invocations.sql  0014_rename_auto_deploy_to_auto_reconcile.sql  0015_add_invocation_claim_deadline.sql  0015_invocation_watermark_manifest.sql  0016_add_invocation_events.sql  0016_drop_projects_mode.sql  0017_add_invocation_lease_token.sql  0018_add_invocation_cancel_requested_at.sql  0019_add_environment_profile_name.sql  0020_project_mode_drop_environment_kind_immutable.sql
playwright/: fixtures.ts  models-lineage.spec.ts  project-onboarding.spec.ts
src/: api.rs  cli.rs  cli_entry.rs  cli_output.rs  cli_runtime.rs  cli_workflow.rs  client.rs  config.rs  db.rs  dbt_runner.rs  dbt_utils.rs  error.rs  event.rs  execution.rs  invocation_bootstrap.rs  invocation_lifecycle.rs  invocation_read_model.rs  invocation_runtime.rs  lib.rs  main.rs  manifest.rs  manifest_preparation.rs  plan_admission.rs  process_state.rs  (+6 more)
(+108 files in other folders)
