[package]
name = "dbtx"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.12.1"
axum = { version = "0.8.4", features = ["macros"] }
clap = { version = "4.5.38", features = ["derive", "env"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
toml = "0.8.19"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
md5 = "0.8.0"
tempfile = "3.19.1"
aes-gcm-siv = "0.11.1"
base64 = "0.22.1"
rand = "0.8.5"
sha2 = "0.10.9"
reqwest = { version = "0.12.15", features = ["json", "stream", "rustls-tls"] }
async-stream = "0.3.6"
futures-util = "0.3.31"
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
syntect = "5.3.0"
urlencoding = "2.1.3"
utoipa = { version = "5.3.1", features = ["chrono", "uuid", "axum_extras"] }

[dev-dependencies]
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
libc = "0.2"
proptest = "1.6.0"
wiremock = "0.6.0"
tower = "0.5"
http-body-util = "0.1"
serde_urlencoded = "0.7"
